<resources>
    <string name="app_name">DirClean</string>
    <string name="prompt">提示</string>
    <string name="scanning">正在扫描，请稍等</string>
    <string name="wechart_file_manager">微信文件管理器</string>
    <string name="refresh">重新扫描</string>
    <string name="info">信息</string>
    <string name="sort">排序</string>
    <string name="by_sort">排序方式</string>
    <string name="cleaning">正在清理，请稍后</string>
    <string name="cancel">取消</string>
    <string name="warning">警告</string>
    <string name="delete_message">清除数据只会保留：\"微信下载\" 和 ：\"微信相机的文件\"；其他文件都会删除且不可恢复，请谨操作。</string>
    <string name="clean">清理</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="about">关于</string>
    <string name="version">版本号</string>
    <string name="contact_me">联系我</string>
    <string name="email">liutangbei@gmail.com</string>
    <string name="source_code">源代码链接</string>
    <string name="source_code_link">https://github.com/TangBeiLiu/DirClean</string>
    <string name="project_des">项目介绍</string>
    <string name="reward">打赏</string>
    <string name="save_reward">保存赞赏码</string>
    <string name="share_app">分享应用</string>
    <string name="crash">Crash</string>
    <string name="crash_empty">是不是很牛逼，还没Crash过</string>
    <string name="open">查看</string>
    <string name="send_develop">邮件</string>

    <string-array name="sort_type">
        <item>时间</item>
        <item>大小</item>
    </string-array>
</resources>
