<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:showDividers="middle"
              android:divider="@drawable/vertical_line"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:id="@+id/tv_open"
            android:textSize="18sp"
            android:textColor="@color/taUnselected"
            android:text="@string/open"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    <TextView
            android:id="@+id/tv_send_email"
            android:textSize="18sp"
            android:textColor="@color/taUnselected"
            android:text="@string/send_develop"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    <TextView
            android:id="@+id/tv_delete"
            android:textSize="18sp"
            android:textColor="@color/taUnselected"
            android:text="@string/delete"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

</LinearLayout>